ros2_ws/log/build_2024-04-24_09-02-31/embr/stderr.log
  File "/home/ubuntu/Documents/EMBR-Bot/ros2_ws/install/embr/lib/python3.10/site-packages/embr/getTemp.py", line 32
    (temp.2f)
          ^
SyntaxError: invalid decimal literal

